# halo2-groth16-bn254-to-bls12-381

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  baseline-after-cyclotomic.tsv  baseline.tsv  rustfmt.toml
.github/workflows/: ci.yml
circuits/src/: semaphore.circom
crates/wrapper-backends/: Cargo.toml
crates/wrapper-backends/src/: groth16.rs  lib.rs  loader.rs  outer.rs  registry.rs  snarkjs.rs
crates/wrapper-backends/src/outer/: compatibility.rs  errors.rs  helpers.rs  mod.rs  planned.rs  tests.rs  traits.rs  types.rs
crates/wrapper-backends/src/outer/direct/: adaptation.rs  artifacts.rs  mod.rs  planning.rs  proving.rs
crates/wrapper-circuits/: Cargo.toml
crates/wrapper-circuits/src/: bn254.rs  error.rs  fp.rs  g1.rs  groth16.rs  lib.rs  metrics.rs  outer.rs  planning.rs  test_support.rs
crates/wrapper-circuits/src/bn254/: ecc.rs  field.rs  final_exp_chain.rs  fp12.rs  fp2.rs  fp6.rs  g2.rs  host.rs  metrics.rs  mod.rs  test_support.rs  tests.rs  traits.rs  types.rs
crates/wrapper-circuits/src/bn254/g2/: affine.rs  jacobian.rs  miller.rs  mod.rs
crates/wrapper-circuits/src/bn254/host/: g2_host.rs  mod.rs  pairing_host.rs
crates/wrapper-circuits/src/bn254/tests/: accumulator.rs  curve.rs  field_and_tower.rs  mod.rs  pairing.rs  support.rs
crates/wrapper-circuits/src/groth16/: commitment.rs  fixtures.rs  poseidon_fq_params.rs  profiling.rs  reference.rs  tests.rs
crates/wrapper-circuits/src/outer/: builder.rs  hosted.rs  input.rs  mod.rs  r1cs.rs  semantics.rs  statement.rs  tests.rs
crates/wrapper-circuits/src/outer/host/: bls12_381.rs  bn254.rs  mod.rs
crates/wrapper-circuits/src/r1cs/: arkworks.rs  builder.rs  cells.rs  equality.rs  error.rs  identity.rs  lowering.rs  metadata.rs  mod.rs  model.rs  tests.rs  zkinterface.rs
crates/wrapper-circuits/src/r1cs/non_native/: fq.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs
crates/wrapper-cli/: Cargo.toml
crates/wrapper-cli/src/: main.rs
crates/wrapper-core/: Cargo.toml
crates/wrapper-core/src/: capabilities.rs  config.rs  error.rs  execution.rs  job.rs  layout.rs  lib.rs  metadata.rs  output.rs  package.rs  phase.rs  statement.rs
crates/wrapper-tests/: Cargo.toml
crates/wrapper-tests/benches/: placeholders.rs  primitives.rs
crates/wrapper-tests/benches/common/: mod.rs
crates/wrapper-tests/benches/ecc/: mod.rs
crates/wrapper-tests/benches/field/: mod.rs
crates/wrapper-tests/benches/outer/: mod.rs
crates/wrapper-tests/benches/pairing/: mod.rs
crates/wrapper-tests/fixtures/: example-config.toml
crates/wrapper-tests/fixtures/groth16/circom_multiplier2/: README.md  generate.sh  proof.json  verification_key.json
crates/wrapper-tests/fixtures/groth16/risc0_stark_verify_vk_only/: README.md  generate.sh  public_input_names.json  verification_key.json
crates/wrapper-tests/fixtures/groth16/semaphore/: README.md  generate.sh  proof.json  public.json  verification_key.json
crates/wrapper-tests/fixtures/groth16/zk_email_header_only/: README.md  email_verifier_header_only.circom  generate.sh  generate_inputs.ts  input.json  metadata.json  proof.json  public.json  source_email.eml  verification_key.json
crates/wrapper-tests/src/: lib.rs
docs/: architecture.md  benchmarking.md  canonical-lowering-plan.md  cyclotomic-unitary-kernel-design.md  final-exponentiation-audit.md  finalize-successful-run-metrics.md  groth16-optimization-summary.md  h-poly-followup-speed-plan.md  midnight-local-optimization-notes.md  midnight-optimizations.md  outer-prover-strategy-plan.md  outer-wrapper-circuit-layered-walkthrough.md  plutus-aiken-integration-plan.md  profiling.md  r1cs-backend-status.md  real-circom-wrapper-integration-plan.md  roadmap.md  semaphore-direct-execution-playbook.md  zk-email-integration-plan.md
docs/decisions/: 0001-initial-workspace-structure.md  0002-bn254-local-optimization-policy.md  0003-direct-outer-setup-cost-reduction.md  0004-local-midnight-proofs-patch.md
docs/latex/: halo2-wrapper-status.tex
docs/plans/: 0002-cyclotomic-unitary-kernel-design.md  0004-zk-email-integration-plan.md  0005-halo2-row-optimization-plan.md  0006-finalize-checkpoint-profiling-plan.md  0007-pairing-kernel-opportunity-audit-plan.md  0008-outer-vk-public-binding-plan.md  0009-midnight-arkworks-stack-migration-plan.md
patches/midnight-proofs/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patches/midnight-proofs/benches/: plonk.rs  zswap_output.rs
patches/midnight-proofs/examples/: serialization.rs
patches/midnight-proofs/src/circuit/floor_planner/: v1.rs
patches/midnight-proofs/src/dev/: cost_model.rs  tfp.rs
patches/midnight-proofs/src/plonk/: direct_logging.rs  evaluation.rs  keygen.rs  mod.rs  permutation.rs  prover.rs  traces.rs
patches/midnight-proofs/src/plonk/bench/: prover.rs
patches/midnight-proofs/src/plonk/lookup/: prover.rs  verifier.rs
patches/midnight-proofs/src/plonk/permutation/: keygen.rs  prover.rs
patches/midnight-proofs/src/plonk/trash/: verifier.rs
patches/midnight-proofs/src/plonk/vanishing/: verifier.rs
patches/midnight-proofs/src/poly/: domain.rs
patches/midnight-proofs/src/poly/kzg/: mod.rs  msm.rs
patches/midnight-proofs/src/transcript/: implementors.rs  mod.rs
patches/midnight-proofs/src/utils/: arithmetic.rs
