[workspace]
members = [
    "crates/wrapper-core",
    "crates/wrapper-circuits",
    "crates/wrapper-backends",
    "crates/wrapper-cli",
    "crates/wrapper-tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/halo2-groth16-bn254-to-bls12-381"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive"] }
criterion = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = "warn"
dbg_macro = "warn"
pedantic = "warn"
todo = "warn"
unwrap_used = "warn"
