[workspace]
members = [
    "crates/wrapper-core",
    "crates/wrapper-circuits",
    "crates/wrapper-backends",
    "crates/wrapper-cli",
    "crates/wrapper-tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/halo2-groth16-bn254-to-bls12-381"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
blake2 = "0.10.6"
blake2b_simd = "1.0.3"
clap = { version = "4.5.38", features = ["derive"] }
criterion = "0.8.2"
ff = "0.13.1"
halo2_proofs = "0.3.2"
halo2curves = "0.9.0"
libc = "0.2.175"
midnight-circuits = { version = "6.0.0", features = ["dev-curves", "testing"] }
midnight-curves = { version = "0.2.0", features = ["dev-curves"] }
midnight-proofs = "0.7.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = "warn"
dbg_macro = "warn"
pedantic = "warn"
todo = "warn"
unwrap_used = "warn"
