[package]
name = "wrapper-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Backend integration placeholders for the wrapper workspace."
readme = "../../README.md"
keywords = ["halo2", "groth16", "bn254", "wrapper"]
categories = ["cryptography"]

[features]
default = []
arkworks = []
midnight = []

[dependencies]
blake2b_simd.workspace = true
ff.workspace = true
midnight-curves.workspace = true
midnight-proofs.workspace = true
rand_core = "0.6.4"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wrapper-circuits = { path = "../wrapper-circuits", features = ["test"] }
wrapper-core = { path = "../wrapper-core" }

[lints]
workspace = true
