[package]
name = "wrapper-circuits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Halo2-facing circuit skeletons for the wrapper workspace."
readme = "../../README.md"
keywords = ["halo2", "groth16", "bn254", "wrapper"]
categories = ["cryptography"]

[features]
default = []
halo2 = []

[dependencies]
ff.workspace = true
halo2curves.workspace = true
midnight-circuits.workspace = true
midnight-curves.workspace = true
midnight-proofs.workspace = true
thiserror.workspace = true
wrapper-core = { path = "../wrapper-core" }

[dev-dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[lints]
workspace = true
